<resources>
    <string name="app_name">Accounts</string>
    <string name="tab_text_1">Open</string>
    <string name="tab_text_2">Pending</string>
    <string name="tab_text_3">Closed</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_accounts">Accounts</string>
    <string name="title_trade">Trade</string>
    <string name="title_markets">Markets</string>
    <string name="title_performance">Performance</string>
    <string name="title_profile">Profile</string>
</resources>