<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/accounts"
        android:icon="@drawable/ic_home"
        android:enabled="true"
        android:title="@string/title_accounts" />

    <item
        android:id="@+id/trade"
        android:icon="@drawable/ic_dashboard"
        android:enabled="true"
        android:title="@string/title_trade" />

    <item
        android:id="@+id/markets"
        android:icon="@drawable/ic_alert"
        android:enabled="true"
        android:title="@string/title_markets" />

    <item
        android:id="@+id/performances"
        android:icon="@drawable/ic_performance"
        android:titleCondensed="@string/title_performance"
        android:enabled="true"
        android:title="@string/title_performance" />

    <item
        android:id="@+id/profile"
        android:icon="@drawable/ic_person"
        android:enabled="true"
        android:title="@string/title_profile" />

</menu>